event screen appear animations

--- a/Klike/Interfaces/EventHeader.xib
+++ b/Klike/Interfaces/EventHeader.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -10,7 +10,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="176"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="event_pic_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="LSl-Gz-XXb" customClass="PFImageView">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="event_pic_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="LSl-Gz-XXb" customClass="PFImageView">
                     <rect key="frame" x="0.0" y="-64" width="320" height="240"/>
                     <color key="backgroundColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.21960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
@@ -24,6 +24,12 @@
                         </mask>
                     </variation>
                 </imageView>
+                <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iLf-0K-fLS">
+                    <rect key="frame" x="0.0" y="-40" width="320" height="216"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="216" id="2gd-Lc-MkL"/>
+                    </constraints>
+                </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tcw-KA-NeG">
                     <rect key="frame" x="0.0" y="176" width="320" height="0.0"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -34,10 +40,13 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="iLf-0K-fLS" secondAttribute="trailing" id="D6Y-oC-7B3"/>
                 <constraint firstAttribute="trailing" secondItem="Tcw-KA-NeG" secondAttribute="trailing" id="EW4-cO-qdQ"/>
+                <constraint firstAttribute="bottom" secondItem="iLf-0K-fLS" secondAttribute="bottom" id="Ew6-3k-uWJ"/>
                 <constraint firstItem="LSl-Gz-XXb" firstAttribute="leading" secondItem="ckK-zZ-jO5" secondAttribute="leading" id="Fdg-mC-4bO"/>
                 <constraint firstAttribute="trailing" secondItem="LSl-Gz-XXb" secondAttribute="trailing" id="Krk-EL-dha"/>
                 <constraint firstItem="LSl-Gz-XXb" firstAttribute="top" secondItem="ckK-zZ-jO5" secondAttribute="top" priority="750" id="Lg3-KN-U99"/>
+                <constraint firstItem="iLf-0K-fLS" firstAttribute="leading" secondItem="ckK-zZ-jO5" secondAttribute="leading" id="ar0-tq-ueV"/>
                 <constraint firstItem="Tcw-KA-NeG" firstAttribute="top" secondItem="ckK-zZ-jO5" secondAttribute="top" priority="999" constant="176" id="hYS-Vt-taK"/>
                 <constraint firstAttribute="bottom" secondItem="LSl-Gz-XXb" secondAttribute="bottom" id="kUa-mW-Uxy"/>
                 <constraint firstAttribute="bottom" secondItem="Tcw-KA-NeG" secondAttribute="bottom" id="nGR-sL-qEy"/>
@@ -45,6 +54,7 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="_imageFake" destination="iLf-0K-fLS" id="hEi-sB-M4I"/>
                 <outlet property="eventImageView" destination="LSl-Gz-XXb" id="Mwg-aO-d28"/>
             </connections>
             <point key="canvasLocation" x="295" y="198"/>
