--- a/Klike/Sources/Controllers/Event/KLEventPaymentActionPageCell.xib
+++ b/Klike/Sources/Controllers/Event/KLEventPaymentActionPageCell.xib
@@ -139,6 +139,7 @@
                 <outlet property="_labelAmount" destination="tZx-wu-kCz" id="O2o-JF-jVb"/>
                 <outlet property="_labelAmountDescription" destination="8dx-aW-eWN" id="xn7-Gt-1Cm"/>
                 <outlet property="_labelTicketsLeft" destination="k2A-Ai-M9u" id="T5d-9W-JuN"/>
+                <outlet property="_viewAction" destination="N9h-IL-dDq" id="Mqr-VS-0Ei"/>
                 <outlet property="_viewSoldOut" destination="KaL-1H-VxO" id="tua-5v-l1F"/>
             </connections>
             <point key="canvasLocation" x="43" y="458.5"/>
