--- a/Klike/Sources/Controllers/Event/KLEventPaymentInfoPageCell.xib
+++ b/Klike/Sources/Controllers/Event/KLEventPaymentInfoPageCell.xib
@@ -25,7 +25,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z3k-fh-DL0">
-                                <rect key="frame" x="0.0" y="25" width="320" height="80"/>
+                                <rect key="frame" x="0.0" y="22" width="320" height="80"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="V8L-EB-NUp"/>
@@ -35,7 +35,7 @@
                                 <rect key="frame" x="0.0" y="193" width="320" height="37"/>
                             </pageControl>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="4Fb-YN-Za5">
-                                <rect key="frame" x="0.0" y="112" width="320" height="85"/>
+                                <rect key="frame" x="0.0" y="119" width="320" height="85"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="85" id="gIc-qg-Yax"/>
@@ -52,7 +52,7 @@
                                 </connections>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J7o-Hc-dlN">
-                                <rect key="frame" x="270" y="0.0" width="50" height="50"/>
+                                <rect key="frame" x="271" y="-1" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="jqa-7o-Y3r"/>
                                     <constraint firstAttribute="width" constant="50" id="yL8-NY-Tr6"/>
@@ -76,12 +76,12 @@
                             <constraint firstAttribute="bottom" secondItem="4Fb-YN-Za5" secondAttribute="bottom" constant="33" id="NMS-AP-aZs"/>
                             <constraint firstAttribute="trailing" secondItem="Z3k-fh-DL0" secondAttribute="trailing" id="OBg-8M-liC"/>
                             <constraint firstAttribute="trailing" secondItem="4Fb-YN-Za5" secondAttribute="trailing" id="S9m-wc-eeA"/>
-                            <constraint firstItem="Z3k-fh-DL0" firstAttribute="top" secondItem="GRL-sC-lzq" secondAttribute="top" constant="25" id="UZj-XP-F5t"/>
-                            <constraint firstItem="J7o-Hc-dlN" firstAttribute="top" secondItem="GRL-sC-lzq" secondAttribute="top" id="UhG-K4-0M7"/>
+                            <constraint firstItem="Z3k-fh-DL0" firstAttribute="top" secondItem="GRL-sC-lzq" secondAttribute="top" constant="22" id="UZj-XP-F5t"/>
+                            <constraint firstItem="J7o-Hc-dlN" firstAttribute="top" secondItem="GRL-sC-lzq" secondAttribute="top" constant="-1" id="UhG-K4-0M7"/>
                             <constraint firstItem="MrK-y4-mGC" firstAttribute="leading" secondItem="GRL-sC-lzq" secondAttribute="leading" id="hpj-ha-xoJ"/>
-                            <constraint firstItem="4Fb-YN-Za5" firstAttribute="top" secondItem="GRL-sC-lzq" secondAttribute="top" constant="112" id="img-sI-PfP"/>
+                            <constraint firstItem="4Fb-YN-Za5" firstAttribute="top" secondItem="GRL-sC-lzq" secondAttribute="top" constant="119" id="img-sI-PfP"/>
                             <constraint firstItem="4Fb-YN-Za5" firstAttribute="leading" secondItem="GRL-sC-lzq" secondAttribute="leading" id="uTR-1G-bIU"/>
-                            <constraint firstAttribute="trailing" secondItem="J7o-Hc-dlN" secondAttribute="trailing" id="x7k-Qx-Z6k"/>
+                            <constraint firstAttribute="trailing" secondItem="J7o-Hc-dlN" secondAttribute="trailing" constant="-1" id="x7k-Qx-Z6k"/>
                             <constraint firstAttribute="bottom" secondItem="MrK-y4-mGC" secondAttribute="bottom" id="x97-tW-xwn"/>
                         </constraints>
                         <variation key="default">
